--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "kitchen",
   "version": "0.1.0",
-  "homepage": "https://suburbandox.github.io/kitchen2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,11 +9,11 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
